# mathdx-feedstock

./: README.md  conda-forge.yml
.azure-pipelines/: azure-pipelines-linux.yml
.ci_support/: linux_64_.yaml  linux_64_c_compiler_version11cuda_compilernvcccuda_compiler_version11.8cxx_compiler_version11.yaml  linux_64_c_compiler_version13cuda_compilerNonecuda_compiler_versionNonecxx_compiler_version13.yaml  linux_64_c_compiler_version13cuda_compiler_version13._cxx_compiler_version13.yaml  linux_64_c_compiler_version13cuda_compilercuda-nvcccuda_compiler_version12.6cxx_compiler_version13.yaml  linux_64_c_compiler_version14cuda_compiler_version12._cxx_compiler_version14.yaml  linux_64_cuda_compiler_version12.6.yaml  linux_64_cuda_compiler_version13._.yaml  linux_aarch64_.yaml
.github/: CODEOWNERS
recipe/: activate.sh  conda_build_config.yaml  deactivate.sh  meta.yaml
recipe/test/: CMakeLists.txt  all_headers.c  all_headers.cu  all_headers.cxx
